# lig-mcs-align

./: README.md  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  README.md  USAGE.md
reports/: 2026-03-06-weekly.md  README.md  progress.md
scripts/: benchmark_runtime.py  optimize_pose.py  render_mcs_coverage_gifs.py  run_pipeline.py  vis_comparison_grid.py  vis_opt_gif.py  vis_ref_opt_gif.py
src/lig_align/: __init__.py  aligner.py  pipeline.py
src/lig_align/alignment/: kinematics.py
src/lig_align/io/: __init__.py  pocket.py
src/lig_align/molecular/: __init__.py  conformer.py  features.py  mcs.py  relax.py
src/lig_align/optimization/: torsion.py
tests/: test_intramolecular_mask.py  test_kinematics.py  test_vina_scoring.py
